nginxapp/2.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello
spec:
  type: ClusterIP
  selector:
    app: nginx-hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
