nginxapp/3.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-hello
  annotations:
    kubernetes.io/ingress.class: ambassador
spec:
  rules:
  - host: demo3.hit.local
    http:
      paths:
        - backend:
            serviceName: nginx-hello
            servicePort: 80
